	PR 9695 	* pdp11.c (N_BADMAG): True for anything but OMAGIC, NMAGIC, ZMAGIC. 	(some_aout_object_p): Delete dead code handling QMAGIC and BMAGIC. 	(adjust_z_magix): Delete dead code handling QMAGIC.